<resources>
    <string name="app_name">Register</string>
    <string name="stringRegister">Register Student</string>
    <string name="stringStudentID">Enter Student ID</string>
    <string name="stringAcademicYear">Select Academic Year</string>
    <string name="stringSemester">Select the Semester</string>
    <string name="stringTermsConditions">I agree to terms and conditions</string>
    <string name="stringSubmit">Submit</string>
    <string name="stringCancel">Cancel</string>

    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="semesters">
        <item></item>
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>


</resources>