<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Register Student"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/tvStudentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/stringStudentID"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvAcademicYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/stringAcademicYear"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinYear"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:entries="@array/years" />

    <TextView
        android:id="@+id/tvSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/stringSemester"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerSemester"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:entries="@array/semesters" />

    <CheckBox
        android:id="@+id/checkboxTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/stringTermsConditions"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/stringSubmit" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/stringCancel" />


</LinearLayout>